--- a/games/index.html
+++ b/games/index.html
@@ -21,14 +21,13 @@
       </header>
       <div class="row">
         <h2>Games</h2>
-        <p>Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.</p>
+        <p>Langenium is a project that encompasses a game engine and it's own world of games and media. Here are the games currently in development, as well as some demo's.   </p>
+        <h3>Langenium Epoch Exordium</h3>
+        <p>A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.</p>
+        <p>Interactive demos of the game are coming soon!</p>
         <ul>
-          <li><img src="/universe/new/exordium-poster-01.png">
-            <h3>Langenium Epoch Exordium</h3>
-            <p>A single player experience with an emphasis on story and philosophy. The game tells the story of Jack, a lone operator of the Helios station. His job is to ensure the precious Exordium element is processed and sent to Earth to be used as an energy source. The space station AI has other plans.</p>
-            <p>Interactive demos of the game are coming soon!</p>
-          </li>
-        </ul>
+          <li><a href="/games/character_test.html">Character test</a></li>
+        </ul><img src="/universe/new/exordium-poster-01.png">
       </div>
     </div>
   </body>
@@ -261,7 +260,6 @@ void main()
   gl_FragColor *= vec4( vLightWeighting, 1.0 ); //
 }
   </script>
-  <script src="/dist/hero.js"></script>
   <script src="/dist/logo.js"></script>
   <script>
     // Facebook Like Button.
