--- a/about.html
+++ b/about.html
@@ -46,6 +46,7 @@
   <script src="/vendor/jquery/dist/jquery.min.js"></script>
   <script src="/vendor/threejs/build/three.min.js"></script>
   <script src="/vendor/threejs/examples/js/controls/OrbitControls.js"></script>
+  <script src="/vendor/threejs/examples/js/loaders/ColladaLoader.js"></script>
   <script src="/dist/Mirror.js"></script>
   <script src="/vendor/ocean/water-material.js"></script>
   <script src="/vendor/Live2D-WebGL-SDK/lib/live2d.min.js"></script>
