--- a/index.html
+++ b/index.html
@@ -1,52 +1,71 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<title>Langenium Editor</title>
-		<link href="./src/core.css" rel="Stylesheet" />
-		<link href="./src/vendor/semantic.css" rel="Stylesheet" />
-		<link href="./src/modes/editor.css" rel="Stylesheet" />
-		<script src="./client.js"></script>
-	</head>
-	<body onload="_init('Editor');">
-		<div class="ui transparent console fitted">
-			<div class="ui small secondary inverted vertical fluid menu">
-			    <div class="item">
-			      <div class="content">
-			        <div class="header">Langenium Serverless Demo</div>
-			      </div>
-			    </div>
-			</div>
-			
-			<div class="ui fluid action mini transparent input">
-			  <input type="text" placeholder=" > ">
-			  <div class="ui button mini inverted basic" onclick="$('.console .menu').slideToggle();"><i class="hide icon"></i></div>
-			</div>
-		    
-		</div>
-		<div class="ui thin inverted vertical sidebar menu">
-			<div class="ui item">
-				<div class="ui compact fluid selection dropdown">
-					<div class="text">Active Scene</div>
-					<i class="dropdown icon"></i>
-					<div class="menu">
-						<div class="item">Choice 1</div>
-						<div class="item">Choice 2</div>
-						<div class="item">Choice 3</div>
-					</div>
+
+<head>
+	<title>Langenium Editor</title>
+	<link href="./src/core.css" rel="Stylesheet" />
+	<link href="./src/vendor/semantic.css" rel="Stylesheet" />
+	<link href="./src/modes/editor.css" rel="Stylesheet" />
+	<script src="./client.js"></script>
+</head>
+
+<body onload="_init('Editor');">
+	<div class="ui transparent console fitted">
+		<div class="ui small secondary inverted vertical fluid menu">
+			<div class="item">
+				<div class="content">
+					<div class="header">Langenium Serverless Demo</div>
 				</div>
 			</div>
 		</div>
-		<div class="ui black tiny launch right attached button launch sidebar-button">
-			<i class="list layout icon"></i>
-		</div>
-		<!-- Google tag (gtag.js) -->
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-C63WD2JVR3"></script>
-		<script>
-			window.dataLayer = window.dataLayer || [];
-			function gtag(){dataLayer.push(arguments);}
-			gtag('js', new Date());
 
-			gtag('config', 'G-C63WD2JVR3');
-		</script>
-	</body>
+		<div class="ui fluid action mini transparent input">
+			<input type="text" placeholder=" > ">
+			<div class="ui button mini inverted basic" onclick="$('.console .menu').slideToggle();"><i class="hide icon"></i>
+			</div>
+		</div>
+
+	</div>
+	<div class="ui thin inverted vertical sidebar menu">
+		<div class="ui item">
+			<div class="ui compact fluid selection dropdown">
+				<div class="text">Active Scene</div>
+				<i class="dropdown icon"></i>
+				<div class="menu">
+					<div class="item">Choice 1</div>
+					<div class="item">Choice 2</div>
+					<div class="item">Choice 3</div>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div class="ui black tiny launch right attached button launch sidebar-button">
+		<i class="list layout icon"></i>
+	</div>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-C63WD2JVR3"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+
+		gtag('config', 'G-C63WD2JVR3');
+	</script>
+	<!-- Matomo -->
+	<script>
+		var _paq = window._paq = window._paq || [];
+		/* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+		_paq.push(['trackPageView']);
+		_paq.push(['enableLinkTracking']);
+		(function () {
+			var u = "https://analytics.openstudios.xyz/";
+			_paq.push(['setTrackerUrl', u + 'matomo.php']);
+			_paq.push(['setSiteId', '9']);
+			var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
+			g.async = true; g.src = u + 'matomo.js'; s.parentNode.insertBefore(g, s);
+		})();
+	</script>
+	<!-- End Matomo Code -->
+</body>
+
 </html>
